# AI_Sheets

./: .dockerignore  .gitignore  Dockerfile  README.md  SheetsAI.py  TODO.txt  compose.yaml  pyproject.toml  query_generator.py  requirements.txt  user_program.py
.github/workflows/: test.yml
data/: employees.csv  pets.csv  sales.csv
src/: SheetsAI.db  SheetsAI.py  query_generator.py  test_sheetsai.py  user_program.py
tests/: test_sheetsai.py
